@@ -4,8 +4,6 @@
 #include "Options.h"
 #include "Iterators.h"
 
-
-
 URL_Iterator::~URL_Iterator (void)
 {
 }
@@ -32,7 +30,7 @@ HTML_Body_Iterator::next (ACE_CString &url)
   int href_index = 0;
 
   for (buf = this->url_.stream ().recv (len);
-       buf > 0;
+       buf != 0;
        buf = this->url_.stream ().recv (len))
     {
 
